# pymultiagent

./: .gitignore  README.md  __init__.py  assistants.py  backends.py  chat.py  example_chat.py  main.py  pyproject.toml  requirements.txt  setup.py  test_backends.py
prompts/: coder_prompt.txt
src/pymultiagent/: __init__.py  __main__.py  agents.py  assistants.py  backends.py  chat.py  example_chat.py  main.py  tests.py
src/pymultiagent/examples/: example_chat.py
src/pymultiagent/prompts/: coder_prompt.txt
src/pymultiagent/tools/: __init__.py
tests/: __init__.py  test_cases.py
tools/: __init__.py  function_tools.py
