[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymultiagent"
version = "0.1.0"
description = "Python multi-agent framework"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Tom Brandenburg" },
]

dependencies = [
    "gradio",
    "tqdm",
    "openai",
    "openai-agents",
    "ipykernel",
    "openpyxl",
    "python-dotenv",
    "requests",
    "pillow",
    "cairosvg",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
pymultiagent = "pymultiagent.main:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.hatch.build]
packages = ["src/pymultiagent"]
